2013-10-20  Ian Piumarta  <com -dot- gmail -at- piumarta (backwards)>

	* plugins/SqueakSSL/sqUnixOpenSSL.c: Fix memory leaks (thanks to
	Levente Uzonyl).

2013-09-09  Ian Piumarta  <com -dot- gmail -at- piumarta (backwards)>

	* cmake/configure (svnversion): Look for evidence of checked out
	sources in both "squeak/trunk/platforms" and "squeak/trunk".

2013-08-19  Ian Piumarta  <com -dot- gmail -at- piumarta (backwards)>

	* doc/README.FastBitBlt: Added instructions for compiling on ARM
	running Linux.

2013-08-15  Ian Piumarta  <piumarta@raspberrypi>

	* cmake/Plugins.cmake: Process ${plugin}_extra_sources in both
	internal and external plugins.  Set ${plugin}_source_dir to the
	location of the generated plugin C source file.

	* cmake/configure: Add option '--enableFastBlt'.

	* CMakeLists.txt: Add option '--enableFastBlt'.

	* plugins/BitBltPlugin/config.cmake: Added.  Use fast bitblt when
	enabled and supported.

	* vm-display-X11/sqUnixX11Arm.S: Added.  Support fast display copy on ARM.

	* vm-display-X11/config.cmake: Include optimised BitBlt code when
	supported and enabled.

	* vm-display-X11/sqUnixX11.c: Use optimised BitBlt support when
	USE_FAST_BLT is defined.

2013-08-10  Ian Piumarta  <com -dot- gmail -at- piumarta (backwards)>

	* vm/sqUnixMain.c: extreMemory is 64 bits on LP64 architectures.
	(strtobkm): Returns long instead of int.

2012-09-17  piumarta  <com -dot- gmail -at- piumarta (backwards)>

	* CMakeLists.txt: Add option '--image64'.  With --image64
	specified: append '_64bit' to plgdir, set scriptsuffix to '64' and
	versionsuffix to '64_bit'.

	* vm/config.cmake: Configure VM_VERSION_INFO as VM_VERSION with
	versionsuffix appended.

	* vm/sqUnixMain.c: Use VM_VERSION_INFO in output of '-version'.

	* vm/build.cmake: Append ${scriptsuffix} to squeakvm.

	* cmake/squeak.in: Search plgdir and plgd64 for 'ckformat'
	program.  Append '64_bit' to plgdir when 64-bit image detected.

	* cmake/configure: Add option '--image64' to help text.
